# global-city-growth

./: .dockerignore  .env.example  .gitignore  Dockerfile.database  Dockerfile.orchestrator  Makefile  README.md  dagster.yaml  dagster.yml  data_catalog.yml  docker-compose.yml  initdb-postgis.sh  initdb.sh  pyproject.toml
configs/: paths.py
orchestration/: definitions.py
orchestration/defs/: assets.py  resources.py
orchestration/defs/assets/: ipums_full_count_census.py
orchestration/global_city_growth/defs/: assets.py  resources.py
readme/: README_DATABASE_DUMP.md  README_OUTPUT_DATA.md  README_RAW_DATA.md
src/download/: data_manifest.lock.yml  data_manifest.yml  download_data.py  download_data_v2.py  download_data_v3.py  freeze_manifest.py  ipumspy_vs_manual.py  upload.py
src/orchestration/: definitions.py  utils.py
src/orchestration/defs/: paths.py  resources.py
src/orchestration/defs/assets/: constants.py  dbt.py  download.py  figure_data_prep.py  figures.py  figures_old.py  ipums_full_count.py  ipums_full_count_census.py  load_ghsl_raster.sh  source_assets.py  sources.py  stats_utils.py  usa.py  usa_sources.py  world.py  world_sources.py
src/orchestration/defs/assets/analysis/: usa_analysis.py  world_analysis.py
src/orchestration/defs/assets/figures/: figure_1.py  figure_2.py  figure_3.py  figure_4.py  figure_config.py  figure_data_prep.py  figure_io.py  figure_stats.py  tables.py  (+2 more)
src/orchestration/defs/resources/: ipums_api.py  paths.py  resources.py  tables.py
src/orchestration/utils/: convolution.py
src/warehouse/: dbt_project.yml  profiles.yml
src/warehouse/macros/: create_cluster_growth_from_cluster_base.sql  create_clusters_base_from_raster.sql  get_optimal_omegas_population_share_cities_above_1m_projections.sql  get_population_share_cities_above_1m_projections.sql  get_rank_size_slopes_projections.sql  get_usa_cluster_growth_population.sql  get_world_cluster_growth_population_country.sql  get_world_rank_vs_size.sql  get_world_size_vs_growth.sql  match_clusters_base_across_years.sql
src/warehouse/models/: sources.yml
src/warehouse/models/usa/: _sources.yml  sources.yml
src/warehouse/models/world/: sources.yml
src/warehouse/seeds/: analysis_parameters.csv
warehouse/: .user.yml  profiles.yml
(+102 files in other folders)
