[project]
name = "global-city-growth"
version = "0.1.0"
description = ""
authors = [
    {name = "andreamusso96",email = "andreamusso96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "dagster (>=1.11.7,<2.0.0)",
    "dagster-webserver (>=1.11.7,<2.0.0)",
    "dagster-dbt (>=0.27.7,<0.28.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dagster-postgres (>=0.27.7,<0.28.0)",
    "dagster-duckdb (>=0.27.7,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "global_city_growth"
registry_modules = [
    "global_city_growth.defs.*",
]
