[project]
name = "global-city-growth"
version = "0.1.0"
description = ""
authors = [
    {name = "andreamusso96",email = "andreamusso96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "dagster (>=1.11.7,<2.0.0)",
    "dagster-webserver (>=1.11.7,<2.0.0)",
    "dagster-dbt (>=0.27.7,<0.28.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dagster-postgres (>=0.27.7,<0.28.0)",
    "dagster-duckdb (>=0.27.7,<0.28.0)",
    "dagster-dg-cli (>=1.11.7,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "xarray (>=2025.8.0,<2026.0.0)",
    "rioxarray (>=0.19.0,<0.20.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"
registry_modules = [
    "orchestration.defs.*",
]
